Add news title
